--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -582,10 +582,53 @@ video {
 .container {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 6rem;
   max-width: 640px;
   padding-top: 2rem;
   padding-bottom: 2rem;
   width: 100%;
+}
+
+.home-arrow-btn {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+
+.home-arrow-btn:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
+
+.home-arrow-btn {
+  border-radius: 9999px;
+  border-width: 1px;
+  height: 2.5rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.home-arrow-btn:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.home-arrow-btn {
+  position: absolute;
+  top: 2.5rem;
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  --tw-text-opacity: 1;
+  color: rgba(156, 163, 175, var(--tw-text-opacity));
+}
+
+.home-arrow-btn:hover {
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+
+.home-arrow-btn {
+  width: 2.5rem;
+  z-index: 10;
 }
 
 .space-y-0 > :not([hidden]) ~ :not([hidden]) {
@@ -31609,6 +31652,50 @@ video {
 
 .animate-bounce {
   animation: bounce 1s infinite;
+}
+
+.loading-indicator {
+  display: inline-block;
+  position: relative;
+  width: 20px;
+  height: 20px;
+}
+
+.loading-indicator div {
+  display: inline-block;
+  position: absolute;
+  left: 2px;
+  width: 4px;
+  background: #fff;
+  animation: loading-indicator 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+
+.loading-indicator div:nth-child(1) {
+  left: 2px;
+  animation-delay: -0.24s;
+}
+
+.loading-indicator div:nth-child(2) {
+  left: 8px;
+  animation-delay: -0.12s;
+}
+
+.loading-indicator div:nth-child(3) {
+  left: 14px;
+  animation-delay: 0;
+}
+
+@keyframes loading-indicator {
+  0% {
+    top: 2px;
+    height: 16px;
+  }
+
+  50%,
+    100% {
+    top: 6px;
+    height: 8px;
+  }
 }
 
 @media (min-width: 640px) {
