--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,7 +2,51 @@
 @tailwind components;
 
 .container {
-  @apply w-full max-w-screen-sm mx-auto py-8;
+  @apply w-full max-w-screen-sm mx-auto py-8 mb-24;
+}
+
+.home-arrow-btn {
+  @apply absolute top-10 z-10 border rounded-full w-10 h-10 text-xs bg-white text-gray-400 shadow-md hover:bg-gray-100 hover:text-gray-500 focus:outline-none;
 }
 
 @tailwind utilities;
+
+@layer utilities {
+  .loading-indicator {
+    display: inline-block;
+    position: relative;
+    width: 20px;
+    height: 20px;
+  }
+  .loading-indicator div {
+    display: inline-block;
+    position: absolute;
+    left: 2px;
+    width: 4px;
+    background: #fff;
+    animation: loading-indicator 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  }
+  .loading-indicator div:nth-child(1) {
+    left: 2px;
+    animation-delay: -0.24s;
+  }
+  .loading-indicator div:nth-child(2) {
+    left: 8px;
+    animation-delay: -0.12s;
+  }
+  .loading-indicator div:nth-child(3) {
+    left: 14px;
+    animation-delay: 0;
+  }
+  @keyframes loading-indicator {
+    0% {
+      top: 2px;
+      height: 16px;
+    }
+    50%,
+    100% {
+      top: 6px;
+      height: 8px;
+    }
+  }
+}
